--- a/portfolio.html
+++ b/portfolio.html
@@ -83,13 +83,20 @@
           <ul class="projects list">
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-8.jpg"
-                  alt="Banking App"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-8.jpg"
+                    alt="Banking App"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Banking App Interface Concept</h2>
                   <p class="type">App</p>
@@ -98,13 +105,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-9.jpg"
-                  alt="Cashless Payment"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-9.jpg"
+                    alt="Cashless Payment"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Cashless Payment</h2>
                   <p class="type">Marketing</p>
@@ -113,13 +127,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-10.jpg"
-                  alt="Meditation App"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-10.jpg"
+                    alt="Meditation App"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Meditation App</h2>
                   <p class="type">App</p>
@@ -128,13 +149,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-11.jpg"
-                  alt="Taxi Service"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-11.jpg"
+                    alt="Taxi Service"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Taxi Service</h2>
                   <p class="type">App</p>
@@ -143,13 +171,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-12.jpg"
-                  alt="Screen Illustrations"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-12.jpg"
+                    alt="Screen Illustrations"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Screen Illustrations</h2>
                   <p class="type">Design</p>
@@ -158,13 +193,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-13.jpg"
-                  alt="Online Courses"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-13.jpg"
+                    alt="Online Courses"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Online Courses</h2>
                   <p class="type">Marketing</p>
@@ -173,13 +215,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-14.jpg"
-                  alt="Instagram Stories"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-14.jpg"
+                    alt="Instagram Stories"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Instagram Concept Stories</h2>
                   <p class="type">Design</p>
@@ -188,13 +237,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-15.jpg"
-                  alt="Organic Food"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-15.jpg"
+                    alt="Organic Food"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Organic Food</h2>
                   <p class="type">Web Site</p>
@@ -203,13 +259,20 @@
             </li>
             <li class="project-card">
               <a href="" class="project link">
-                <img
-                  src="./images/img-16.jpg"
-                  alt="Coffee"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
+                <div class="project-card-cover">
+                  <img
+                    src="./images/img-16.jpg"
+                    alt="Coffee"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="project-card-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Fresh Coffee</h2>
                   <p class="type">Web Site</p>
